--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - "wget -nc http://download.geteventstore.com/binaries/EventStore-OSS-Linux-v3.0.3.tar.gz"
   - "tar -xvzf EventStore-OSS-Linux-v3.0.3.tar.gz"
   - "mv EventStore-OSS-Linux-v3.0.3 .event_store"
-  - "cd .event_store && ./run-node.sh --db ./ESData &"
+  - "cd .event_store && ./run-node.sh --mem-db &"
   - "bundle install"
 script: "bundle exec rake ci"
 rvm:
