--- a/.hurtle.yml
+++ b/.hurtle.yml
@@ -2,4 +2,6 @@ project_name: estore
 change:
   version: patch
   desc: |
-    Tests cleanup. Add hurtle file.
+    * Tests cleanup. Add hurtle file.
+    * Add methods for cirqus compatibility
+    * Add better error for writing events with wrong version
